Add support for OFFSET and LIMIT operators