@@ -1,14 +1,16 @@
 package io.activej.dataflow.calcite.where;
 
+import io.activej.dataflow.calcite.operand.Operand;
 import io.activej.record.Record;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public final class InPredicate implements WherePredicate {
-	private final Operand value;
-	private final List<Operand> options;
+	private final Operand<?> value;
+	private final List<Operand<?>> options;
 
-	public InPredicate(Operand value, List<Operand> options) {
+	public InPredicate(Operand<?> value, List<Operand<?>> options) {
 		this.value = value;
 		this.options = options;
 	}
@@ -18,7 +20,7 @@ public final class InPredicate implements WherePredicate {
 		Object toTest = value.getValue(record);
 		if (toTest == null) return false;
 
-		for (Operand option : options) {
+		for (Operand<?> option : options) {
 			Object optionValue = option.getValue(record);
 			if (toTest.equals(optionValue)) return true;
 		}
@@ -32,15 +34,15 @@ public final class InPredicate implements WherePredicate {
 				value.materialize(params),
 				options.stream()
 						.map(option -> option.materialize(params))
-						.toList()
+						.collect(Collectors.toList())
 		);
 	}
 
-	public Operand getValue() {
+	public Operand<?> getValue() {
 		return value;
 	}
 
-	public List<Operand> getOptions() {
+	public List<Operand<?>> getOptions() {
 		return options;
 	}
 
